# sea-battle

./: CMakeLists.txt  README.md  ability_manager.cpp  ability_manager.h  commands.json  game.cpp  game.h  game_field.cpp  game_field.h  main.cpp  message_game_enum.cpp  ship.cpp  ship.h  ship_manager.cpp  ship_manager.h
ability/: ability.cpp  ability.h  bombard.cpp  bombard.h  double_damage.cpp  double_damage.h  scanner.cpp  scanner.h
input-output/: game_controller.h  game_controller.hpp  game_renderer.h  game_renderer.hpp  input_handler.cpp  input_handler.h  render_tracker.h  render_tracker.hpp  terminal_input.cpp  terminal_input.h
renderer-elements/: draw_field.cpp  draw_field.h  field_renderer.cpp  field_renderer.h  game_message.cpp  game_message.h  message_render.cpp  message_render.h
save-load/: file_handler.cpp  file_handler.h  game_state.cpp  game_state.h
tests/: info.txt  test_1.txt
